--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Fix Naming & Indentation Errors</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="main.css">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
 
